ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-default-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /api/user(/|$)(.*)
        pathType: Prefix
        backend:
          service: 
            name: user-service
            port:
              number: 8080
      - path: /product(/|$)(.*)
        pathType: Prefix
        backend:
          service: 
            name: product-service
            port:
              number: 8080
      - path: /order(/|$)(.*)
        pathType: Prefix
        backend:
          service: 
            name: order-service
            port:
              number: 8080
